--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
   - gem install bundle-audit
 
 script:
-  - RAILS_ENV=test bundle exec rake db:setup
+  - RAILS_ENV=test bundle exec rake db:test:prepare
   - bundle exec rspec
   - bundle exec rubocop --config .rubocop.yml
   - bundle-audit check --update
